# src/main/java/com/sc7258/tddcafekiosk/api/OrderApiDelegateImpl.java
@@ -2,12 +2,13 @@ package com.sc7258.tddcafekiosk.api;
 
 import com.sc7258.tddcafekiosk.api.models.OrderCreateRequest;
 import com.sc7258.tddcafekiosk.api.models.OrderResponse;
+import com.sc7258.tddcafekiosk.api.models.OrderStatusUpdateRequest; // OrderStatusUpdateRequest import 추가
 import com.sc7258.tddcafekiosk.domain.order.OrderService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Service; // Service import 추가
+import org.springframework.stereotype.Service;
 
-@Service // @RestController 대신 @Service 사용
+@Service
 public class OrderApiDelegateImpl implements OrderApiDelegate {
 
     private final OrderService orderService;
@@ -19,5 +20,11 @@ public class OrderApiDelegateImpl implements OrderApiDelegate {
     @Override
     public ResponseEntity<OrderResponse> createOrder(OrderCreateRequest orderCreateRequest) {
         return ResponseEntity.status(HttpStatus.CREATED).body(orderService.createOrder(orderCreateRequest));
+    }
+
+    @Override
+    public ResponseEntity<OrderResponse> updateOrderStatus(Long orderId, OrderStatusUpdateRequest orderStatusUpdateRequest) {
+        OrderResponse updatedOrder = orderService.updateOrderStatus(orderId, orderStatusUpdateRequest);
+        return ResponseEntity.ok(updatedOrder);
     }
 }
